# gitremind-rs

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs
