[package]
name = "gitremind"
version = "0.1.0"
edition = "2021"
authors = [
    "Heath Stewart (https://github.com/heaths)"
]
description = """
Create git commit and push hooks to remind you of tasks.
"""
repository = "https://github.com/heaths/template-rustlang"
license = "MIT"

[dependencies]
clap = { version = "4.0.22", features = ["derive", "cargo"] }
console = { version = "0.15.2", features = ["windows-console-colors"] }
ctrlc = { version = "3.2.3", features = ["termination"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
thiserror = "1.0.37"

[profile.release]
split-debuginfo = "packed"
strip = "symbols"

[[bin]]
name = "git-remind"
path = "src/bin/main.rs"
